fix(core): enforce canonical collection replacement and placeholder resolution
YAML list overriding in Spring Boot replaces the entire base collection
when a profile redefines an indexed property, rather than performing an
element-by-element merge. Previously, ProfileMerger's list purging logic
relied on literal prefix matching, which left trailing array indices
residual in the merged configuration when a profile specified a smaller list.
Additionally, strict string comparison failed to purge collections when a
profile used a different naming convention (e.g., camelCase vs. kebab-case)
or when an explicit null scalar was declared to reset complex structures
(BL-09).

Furthermore, environmental property placeholders using the ${VAR:default}
syntax were evaluated as raw literal strings. This introduced false-negative
and false-positive risks across rules like H2ConsoleExposedRule and
ActuatorExposureRule when values were parameterized with default fallbacks,
or when dynamic runtime properties lacked defaults altogether.

- Added EnvironmentPlaceholder (dev.scg.core): parses ${VAR:default}
  expressions and resolves their fallback values. Returns Optional.empty()
  for unresolved placeholders without defaults (e.g., ${VAR}), signaling to
  rules that the property is dynamic and preventing false positives during CI.
- Updated ProfileMerger: introduced extractCanonicalRoot() to canonicalize
  property keys before purging base values. Collection overrides now purge all
  base indices regardless of array size differences or casing convention
  mismatches (kebab-case vs. camelCase). Retained and integrated BL-09
  dot-prefix purging logic for explicit null scalars (.__null_scalar__).
- Updated RelaxedBoolean, ActuatorExposureRule, and H2ConsoleExposedRule:
  integrated EnvironmentPlaceholder resolution prior to evaluating truthy
  booleans or wildcard string patterns (*).

Tests: Added EnvironmentPlaceholderTest covering literal strings, fallback
extractions, wildcard fallb